--- a/src/main/resources/jasperReport/user_detail.jrxml
+++ b/src/main/resources/jasperReport/user_detail.jrxml
@@ -143,7 +143,7 @@
 					<textElement textAlignment="Center">
 						<font fontName="Times New Roman" size="18" isItalic="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$P{d_entity}.isActive() ? "MỞ" : "ĐÓNG"]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$P{d_entity}.getActive()==0 ? "ĐÓNG" : $P{d_entity}.getActive()>0 ? "MỞ" : "KHÓA" ]]></textFieldExpression>
 				</textField>
 			</elementGroup>
 			<rectangle radius="20">
